--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <h2>Hello </h2>
 <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
 <button mat-raised-button>Basic</button>
