--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+:root {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    font-family: Roboto,
+        "Helvetica Neue", sans-serif;
+}
+
+ui,li{
+    list-style: none;
+}
