--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,22 @@
 <header>
-    <h1 class="title"> 
-       <!-- logo -->
-       <mat-icon class="logo">
-        <span class="material-icons-outlined">
-            cloud_queue
-            </span>
-       </mat-icon>
-       <!-- title -->
-        aWheather | Angular
-       <!-- location -->
-       <span class="subTitle">
-           <span class="subTitleSpan">
-               Newai, India
-           </span>
-       </span>
-    </h1>
+  <h1 class="title">
+    <!-- logo -->
+    <mat-icon class="logo">
+      <span class="material-icons-outlined">
+        cloud_queue
+      </span>
+    </mat-icon>
+    <!-- title -->
+    aWheather | Angular
+    <!-- location -->
+    <span class="subTitle">
+      <span class="subTitleSpan">
+        <span *ngIf="weatherData && !isLoading">
+
+          <!-- Newai, India -->
+          {{weatherData?.location?.name}} , {{weatherData.location?.country}}
+        </span>
+      </span>
+    </span>
+  </h1>
 </header>
